@@ -44,8 +44,8 @@ public class JsonReaderTest extends JsonTest {
             Player player = reader.read();
             List<List<LevelStats>> statsList = player.getCompletedLevelStats();
             assertEquals(2, statsList.get(0).size());
-            checkLevelStats("level Z", 2, 3.0, statsList.get(0).getFirst());
-            checkLevelStats("level F", 20, 6.3, statsList.get(0).getLast());
+            checkLevelStats("level Z", 2, 3.0, statsList.get(0).get(0));
+            checkLevelStats("level F", 20, 6.3, statsList.get(0).get(statsList.size() - 1));
         } catch (IOException e) {
             fail("Couldn't read from file");
         }
